
classDiagram
    class User {
        -id: int
        -username: str
        -email: str
        +__init__(id: int, username: str, email: str)
    }
    class Ticket {
        -id: int
        -title: str
        -description: str
        -status: str
        +__init__(id: int, title: str, description: str, status: str)
    }
    class HelpDeskStaff {
        -id: int
        -username: str
        -email: str
        +__init__(id: int, username: str, email: str)
    }
    class TicketManager {
        -tickets: list[Ticket]
        +assign_status(ticket_id: int, status: str)
        +exchange_messages(ticket_id: int, message: str)
        +analyze_data()
    }
    User --> Ticket
    HelpDeskStaff --> Ticket
    TicketManager --> Ticket
